definitely delete old files from _recycler_ directories. When a _recycler_
directory exists within the path of a file to delete via the File module, the
file is not actually deleted, but stored in the _recycler_ folder.
This new task now deletes all files insider _recycler_ folders that have been
moved there for longer than a given number of days.

-------------------------------------------------------------------------------
Backend
-------------------------------------------------------------------------------

RTEhtmlarea
-------------------------------------------------------------------------------

...

Other improvements to the Backend
-------------------------------------------------------------------------------

...

-------------------------------------------------------------------------------
Skin / Backend UI
-------------------------------------------------------------------------------

...

Other Improvements in the Skin / Backend UI
-------------------------------------------------------------------------------

...

-------------------------------------------------------------------------------
Administration / Customization
-------------------------------------------------------------------------------

...

Install tool
-------------------------------------------------------------------------------

...

-------------------------------------------------------------------------------
Development
-------------------------------------------------------------------------------

Extbase / Fluid
-------------------------------------------------------------------------------

...

Although we do our best to make adjustments in a backwards-compatible manner,
we needed to break backwards compatibility at a few places. In order to see if
you are affected and how the issues can be solved, please read our notes on
breaking changes:

http://forge.typo3.org/projects/typo3v4-mvc/wiki/Breaking_Changes

Backend Development