@@ -75,7 +75,9 @@ class tslib_AdminPanel {
 	public function initialize() {
 		$this->saveConfigOptions();
 
-				// Setting some values based on the admin panel
+		setcookie('TYPO3-AdminPanel',TRUE);
+
+			// Setting some values based on the admin panel
 		$GLOBALS['TSFE']->forceTemplateParsing = $this->extGetFeAdminValue('tsdebug', 'forceTemplateParsing');
 		$GLOBALS['TSFE']->displayEditIcons = $this->extGetFeAdminValue('edit', 'displayIcons');
 		$GLOBALS['TSFE']->displayFieldEditIcons = $this->extGetFeAdminValue('edit', 'displayFieldIcons');
